--- a/packages/SystemUI/res/values/saosp_strings.xml
+++ b/packages/SystemUI/res/values/saosp_strings.xml
@@ -68,4 +68,8 @@
     <string name="quick_settings_music_pause">Pause</string>
     <string name="quick_settings_ime_label">IME</string>
 
+    <!-- Typing virtual buttons -->
+    <string name="accessibility_dpad_left">Cursor left</string>
+    <string name="accessibility_dpad_right">Cursor right</string>
+
 </resources>
