--- a/core/res/res/values/saosp_strings.xml
+++ b/core/res/res/values/saosp_strings.xml
@@ -37,5 +37,8 @@
     <string name="reboot_confirm" product="default">Your phone will restart.</string>
     <!-- Restart Progress Dialog. This is shown if the user chooses to restart the phone. -->
     <string name="reboot_progress">Restarting\u2026</string>
+
+    <!-- kill app long press back -->
+    <string name="app_killed_message">App killed</string>
    
 </resources>
