bring back screen record shortcut
Change-Id: Iad561a2dc7f6c68b49e40537c4d5152d93dcdf09

--- a/core/res/res/values/saosp_symbols.xml
+++ b/core/res/res/values/saosp_symbols.xml
@@ -60,4 +60,7 @@
   <!-- LED pulse -->
   <java-symbol type="bool" name="config_ledCanPulse" />
 
+  <!-- Screen Recording -->
+  <java-symbol type="bool" name="config_enableScreenrecordChord" />
+
 </resources>
