--- a/packages/SystemUI/res/values/saosp_dimens.xml
+++ b/packages/SystemUI/res/values/saosp_dimens.xml
@@ -20,4 +20,7 @@
     <!-- Network traffic monitor multi-line text size -->
     <dimen name="net_traffic_multi_text_size">9dp</dimen>
 
+    <dimen name="keyguard_shortcut_item_margin">10dp</dimen>
+    <dimen name="battery_level_text_size_small">12sp</dimen>
+
 </resources>
