--- a/packages/SystemUI/res/values/saosp_colors.xml
+++ b/packages/SystemUI/res/values/saosp_colors.xml
@@ -20,4 +20,7 @@
     <color name="system_secondary_color">@*android:color/material_pixel_blue_light</color>
     <color name="system_accent_color">@*android:color/material_pixel_blue_bright</color>
 
+    <!-- Navigation button ripple color -->
+    <color name="navbutton_ripple_color">#FFFFFFFF</color>
+
 </resources>
