--- a/packages/SystemUI/res/values-ru/saosp_strings.xml
+++ b/packages/SystemUI/res/values-ru/saosp_strings.xml
@@ -37,4 +37,25 @@
     <string name="screenrecord_notif_pointer_off">Скрыть указатель</string>
     <!-- Screen record notification error title -->
     <string name="screenrecord_notif_error">Невозможно записать экран</string>
+     
+    <!-- Quick Settings tiles -->
+    <string name="quick_settings_screenshot_label">Скриншот</string>
+    <string name="quick_settings_sync_label">Синхронизация</string>
+    <string name="accessibility_quick_settings_sync_off">Синхронизация выкл.</string>
+    <string name="accessibility_quick_settings_sync_on">Синхронизация</string>
+    <string name="accessibility_quick_settings_sync_changed_off">Синхронизация выключена</string>
+    <string name="accessibility_quick_settings_sync_changed_on">Синхронизация включена</string>
+
+    <!-- Reboot/Recovery QS Tile -->  
+    <string name="quick_settings_reboot_label">Перезагрузка</string>
+    <string name="quick_settings_reboot_recovery_label">Режим восстановления</string>
+    <string name="accessibility_quick_settings_usb_tether_off">USB-модем отключен</string>
+    <string name="accessibility_quick_settings_usb_tether_on">USB-модем включен</string>
+    <string name="accessibility_quick_settings_usb_tether_changed_off">USB-модем отключен</string>
+    <string name="accessibility_quick_settings_usb_tether_changed_on">USB-модем включен</string>
+    <string name="quick_settings_usb_tether_label">USB-модем</string>
+    <string name="quick_settings_music_label">Музыка</string>
+    <string name="quick_settings_music_play">Играть</string>
+    <string name="quick_settings_music_pause">Пауза</string>
+    <string name="quick_settings_ime_label">Способ ввода</string>
 </resources>
