Custom Carrier Label & Carrier Label Placement [1/2] [Squashed]
Squash Of:
Keyguard/Statusbar Carrier label options [1/2]
* Stock behavior(only on keyguard), only on statusbar,both disabled or both enabled
* code originally writted by @Altaf-Mahdi i just squased into one commit
https://github.com/PureNexusProject-Legacy/android_frameworks_base/commit/688d56fe23f1f7d5c3eedfd78e0ac13d32d1cb84

Show carrier label / custom & change color [1/2]
*code originally written by @martincz
*includes various fixs by the du team
https://github.com/PureNexusProject-Legacy/android_frameworks_base/commit/16a247ae6468127320c584b053aa095c169d01b8

Carrier label - fix capitilization bug
https://github.com/PureNexusProject-Legacy/android_frameworks_base/commit/4b9e22b6e544b5a8a4d353e7ac37453c2fdfd3c6

remove carrier label color and make carrier label play nice with dark statusbar
https://github.com/PureNexusProject-Legacy/android_frameworks_base/commit/3f3210229202b8b61bfd875e4429a26b4b267b7f

Fix Carrier Label font size not changing on system font size change
https://github.com/DirtyUnicorns/android_frameworks_base/commit/8da9dcf5d401828bd60855d6a3bb56e386926889

include carrier label in icon merger width calculation
https://github.com/PureNexusProject-Legacy/android_frameworks_base/commit/9df3a0c41fcade40e84766987896baff9f560cc7

Credit/Thanks to @Altaf-Mahdi @beanstown106 @dwitherell and @martincz

PureNexus Edits:
*adapt statusbar hook for N

--- a/packages/SystemUI/res/values/saosp_styles.xml
+++ b/packages/SystemUI/res/values/saosp_styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 The Android Open Source Project
+<!--
+     Copyright (C) 2016 The Pure Nexus Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,10 +14,12 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
 <resources>
-    <!-- Bounds [left top right bottom] on screen for picture-in-picture (PIP) windows,
-         when the PIP menu is shown with settings. -->
-    <string translatable="false" name="pip_settings_bounds">"778 54 1258 324"</string>
-    
+    <!-- Custom Carrier Label -->
+    <style name="TextAppearance.StatusBar.CarrierLabel" parent="@*android:style/TextAppearance.StatusBar.Icon">
+        <!-- Note: must be dp to fit in status bar -->
+        <item name="android:textSize">@dimen/status_bar_carrier_height</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/status_bar_carrier_color</item>
+    </style>
 </resources>
