--- a/packages/SystemUI/res/values/saosp_dimens.xml
+++ b/packages/SystemUI/res/values/saosp_dimens.xml
@@ -27,4 +27,7 @@
     <dimen name="phone_width">320dp</dimen>
     <dimen name="phone_height">420dp</dimen>
 
+    <!-- carrier label text height -->
+    <dimen name="status_bar_carrier_height">14dp</dimen>
+
 </resources>
