--- a/packages/SystemUI/res/values/saosp_colors.xml
+++ b/packages/SystemUI/res/values/saosp_colors.xml
@@ -37,4 +37,7 @@
     <!-- carrier label color -->
     <color name="status_bar_carrier_color">#FFFFFFFF</color>
 
+    <!-- Status bar battery level text color -->
+    <color name="status_bar_battery_level_text_color">#ffffff</color>
+
 </resources>
