--- a/packages/SystemUI/res/values-ru/saosp_strings.xml
+++ b/packages/SystemUI/res/values-ru/saosp_strings.xml
@@ -58,4 +58,11 @@
     <string name="quick_settings_music_play">Играть</string>
     <string name="quick_settings_music_pause">Пауза</string>
     <string name="quick_settings_ime_label">Способ ввода</string>
+    <string name="quick_settings_caffeine_label">Запрет сна</string>
+    <string name="accessibility_quick_settings_caffeine_off">Переход в спящий режим разрешён.</string>
+    <string name="accessibility_quick_settings_caffeine_on">Переход в спящий режим запрещён.</string>
+     
+    <!-- Typing virtual buttons -->
+    <string name="accessibility_dpad_left">Курсор влево</string>
+    <string name="accessibility_dpad_right">Курсор вправо</string> 
 </resources>
