base: SystemUI: make QS columns count configurable
And add infrastructure to add more settings and
distribute them to QS panel

PS4
we must explicitly hide the columns submenu

Change-Id: Id033a5a2bcd983d7704923e760bb8941c91be013

--- a/packages/SystemUI/res/values/saosp_strings.xml
+++ b/packages/SystemUI/res/values/saosp_strings.xml
@@ -102,4 +102,10 @@
     <!-- Content description of the data connection type HSPA+ for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
     <string name="accessibility_data_connection_hspap">HSPA+</string>
 
+    <string name="qs_menu_item_columns">Columns</string>
+    <string name="qs_menu_item_columns_three">3</string>
+    <string name="qs_menu_item_columns_four">4</string>
+    <string name="qs_menu_item_columns_five">5</string>
+    <string name="qs_menu_item_reset">Reset</string>
+
 </resources>
