--- a/packages/SystemUI/res/values-ru/saosp_strings.xml
+++ b/packages/SystemUI/res/values-ru/saosp_strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
-     Copyright (C) 2016 Benzo Rom
+<!-- Copyright (C) 2016 The Android Open Source Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -13,19 +12,33 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- Notification which notifies user flashlight is enabled -->
-    <string name="quick_settings_tile_flashlight_not_title">Фонарик включён</string>
-    <string name="quick_settings_tile_flashlight_not_summary">Нажмите для отключения</string>
+    <!-- Quick Settings tiles -->   
+    <string name="quick_settings_screenshot_label">Скриншот</string>
+    <string name="quick_settings_sync_label">Синхронизация</string>
+    <string name="accessibility_quick_settings_sync_off">Синхронизация выкл.</string>
+    <string name="accessibility_quick_settings_sync_on">Синхронизация</string>
+    <string name="accessibility_quick_settings_sync_changed_off">Синхронизация выключена</string>
+    <string name="accessibility_quick_settings_sync_changed_on">Синхронизация включена</string>
+    <string name="quick_settings_reboot_label">Перезагрузка</string>
+    <string name="quick_settings_reboot_recovery_label">Режим восстановления</string>
+    <string name="accessibility_quick_settings_usb_tether_off">USB-модем отключен</string>
+    <string name="accessibility_quick_settings_usb_tether_on">USB-модем включен</string>
+    <string name="accessibility_quick_settings_usb_tether_changed_off">USB-модем отключен</string>
+    <string name="accessibility_quick_settings_usb_tether_changed_on">USB-модем включен</string>
+    <string name="quick_settings_usb_tether_label">USB-модем</string>
+    <string name="quick_settings_music_label">Музыка</string>
+    <string name="quick_settings_music_play">Играть</string>
+    <string name="quick_settings_music_pause">Пауза</string>
+    <string name="quick_settings_ime_tile_label">Способ ввода</string>
+    <string name="quick_settings_caffeine_label">Запрет сна</string>
+    <string name="accessibility_quick_settings_caffeine_off">Переход в спящий режим разрешён.</string>
+    <string name="accessibility_quick_settings_caffeine_on">Переход в спящий режим запрещён.</string>
+    <string name="quick_settings_heads_up_label">Всплыв. уведомления</string>
+    <string name="accessibility_quick_settings_heads_up_off">Всплывающие уведомления выкл.</string>
+    <string name="accessibility_quick_settings_heads_up_on">Всплывающие уведомления</string>
+    <string name="accessibility_quick_settings_heads_up_changed_off">Всплывающие уведомления отключены.</string>
+    <string name="accessibility_quick_settings_heads_up_changed_on">Всплывающие уведомления включены.</string>
 
-    <!-- Strings for lockscreen shortcut hints -->
-    <string name="left_shortcut_hint">Проведите вправо для %1$s</string>
-    <string name="right_shortcut_hint">Проведите влево для %1$s</string>
-    <string name="lockscreen_message">Нажмите на значок слева или справа, чтобы переназначить ярлык экрана блокировки.</string>
-    <string name="lockscreen_default_target">По умолчанию</string>
-    <string name="select_application">Выбор приложения</string>
-    <string name="lockscreen_choose_action_title">Выбор действия</string>
-    <string name="lockscreen_none_target">Нет</string>
-    
     <!-- Screenrecord Notification Ticker -->
     <string name="screenrecord_notif_ticker">Экран записывается</string>
     <!-- Screenrecord notification title -->
@@ -37,32 +50,18 @@
     <string name="screenrecord_notif_pointer_off">Скрыть указатель</string>
     <!-- Screen record notification error title -->
     <string name="screenrecord_notif_error">Невозможно записать экран</string>
-     
-    <!-- Quick Settings tiles -->
-    <string name="quick_settings_screenshot_label">Скриншот</string>
-    <string name="quick_settings_sync_label">Синхронизация</string>
-    <string name="accessibility_quick_settings_sync_off">Синхронизация выкл.</string>
-    <string name="accessibility_quick_settings_sync_on">Синхронизация</string>
-    <string name="accessibility_quick_settings_sync_changed_off">Синхронизация выключена</string>
-    <string name="accessibility_quick_settings_sync_changed_on">Синхронизация включена</string>
 
-    <!-- Reboot/Recovery QS Tile -->  
-    <string name="quick_settings_reboot_label">Перезагрузка</string>
-    <string name="quick_settings_reboot_recovery_label">Режим восстановления</string>
-    <string name="accessibility_quick_settings_usb_tether_off">USB-модем отключен</string>
-    <string name="accessibility_quick_settings_usb_tether_on">USB-модем включен</string>
-    <string name="accessibility_quick_settings_usb_tether_changed_off">USB-модем отключен</string>
-    <string name="accessibility_quick_settings_usb_tether_changed_on">USB-модем включен</string>
-    <string name="quick_settings_usb_tether_label">USB-модем</string>
-    <string name="quick_settings_music_label">Музыка</string>
-    <string name="quick_settings_music_play">Играть</string>
-    <string name="quick_settings_music_pause">Пауза</string>
-    <string name="quick_settings_ime_label">Способ ввода</string>
-    <string name="quick_settings_caffeine_label">Запрет сна</string>
-    <string name="accessibility_quick_settings_caffeine_off">Переход в спящий режим разрешён.</string>
-    <string name="accessibility_quick_settings_caffeine_on">Переход в спящий режим запрещён.</string>
-     
-    <!-- Typing virtual buttons -->
-    <string name="accessibility_dpad_left">Курсор влево</string>
-    <string name="accessibility_dpad_right">Курсор вправо</string> 
+    <!-- Strings for lockscreen shortcut hints -->
+    <string name="left_shortcut_hint">Проведите вправо для %1$s</string>
+    <string name="right_shortcut_hint">Проведите влево для %1$s</string>
+    <string name="lockscreen_message">Нажмите на значок слева или справа, чтобы переназначить ярлык экрана блокировки.</string>
+    <string name="lockscreen_default_target">По умолчанию</string>
+    <string name="select_application">Выбор приложения</string>
+    <string name="lockscreen_choose_action_title">Выбор действия</string>
+    <string name="lockscreen_none_target">Нет</string>
+
+    <!-- Heads up snooze toast -->
+    <string name="heads_up_snooze_message_one_minute">Всплывающие уведомления отключены на 1 минуту.</string>
+    <string name="heads_up_snooze_message">Всплывающие уведомления отключены на <xliff:g id="number">%d</xliff:g> минут.</string>
+
 </resources>
