Partial screenshot aborted by user: show a less troubled warning
This text will be still suitable for unknown screenshot errors,
being good also when the user cancels the drag action.

Change-Id: I9473f439a927796edb44fcdb0ee0964c39383c4e

--- a/packages/SystemUI/res/values/saosp_strings.xml
+++ b/packages/SystemUI/res/values/saosp_strings.xml
@@ -81,4 +81,8 @@
     <string name="accessibility_dpad_left">Cursor left</string>
     <string name="accessibility_dpad_right">Cursor right</string>
 
+    <!-- Screenshot action -->
+    <string name="screenshot_abort_title">No screenshot taken</string>
+    <string name="screenshot_abort_text">Operation aborted</string>
+
 </resources>
