Update RU Trasnaltions

--- a/packages/SystemUI/res/values-ru/saosp_strings.xml
+++ b/packages/SystemUI/res/values-ru/saosp_strings.xml
@@ -13,7 +13,8 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- Quick Settings tiles -->   
-    <string name="quick_settings_screenshot_label">Скриншот</string>
+    <string name="quick_settings_screenshot_label">Снимок экрана</string>
+    <string name="quick_settings_region_screenshot_label">Снимок области</string>
     <string name="quick_settings_sync_label">Синхронизация</string>
     <string name="accessibility_quick_settings_sync_off">Синхронизация выкл.</string>
     <string name="accessibility_quick_settings_sync_on">Синхронизация</string>
@@ -64,4 +65,15 @@
     <string name="heads_up_snooze_message_one_minute">Всплывающие уведомления отключены на 1 минуту.</string>
     <string name="heads_up_snooze_message">Всплывающие уведомления отключены на <xliff:g id="number">%d</xliff:g> минут.</string>
 
+    <!-- NavBar Tuner -->
+    <string name="menu_ime_always_show">Меню / Переключ. клавиатуры (всегда)</string>
+    <string name="search">Поиск</string>
+
+    <!-- Typing virtual buttons -->
+    <string name="accessibility_dpad_left">Курсор влево</string>
+    <string name="accessibility_dpad_right">Курсор вправо</string>
+
+    <!-- Screenshot action -->
+    <string name="screenshot_abort_title">Снимок экрана не выполнен</string>
+    <string name="screenshot_abort_text">Операция прервана</string>
 </resources>
