--- a/packages/SystemUI/res/layout/keyguard_status_bar.xml
+++ b/packages/SystemUI/res/layout/keyguard_status_bar.xml
@@ -56,11 +56,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/header_battery_margin_keyguard"
-            android:paddingEnd="@dimen/battery_level_padding_end"
-            android:textColor="@color/status_bar_battery_level_text_color"
-            android:visibility="gone"
+            android:textStyle="normal"
             android:textSize="@dimen/battery_level_text_size"
+            android:textColor="@color/status_bar_battery_level_text_color"
             android:importantForAccessibility="noHideDescendants"/>
     </LinearLayout>
 
