--- a/packages/SystemUI/res/layout/status_bar.xml
+++ b/packages/SystemUI/res/layout/status_bar.xml
@@ -76,9 +76,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="@dimen/header_battery_margin_keyguard"
-                android:textColor="@color/status_bar_battery_level_text_color"
-                android:textSize="@dimen/battery_level_text_size" />
+                android:textStyle="normal"
+                android:textSize="@dimen/battery_level_text_size"
+                android:textColor="@color/status_bar_battery_level_text_color" />
 
             <com.android.systemui.statusbar.policy.Clock
                 android:id="@+id/clock"
