--- a/packages/SystemUI/res/values-ru/saosp_strings.xml
+++ b/packages/SystemUI/res/values-ru/saosp_strings.xml
@@ -76,4 +76,10 @@
     <!-- Screenshot action -->
     <string name="screenshot_abort_title">Снимок экрана не выполнен</string>
     <string name="screenshot_abort_text">Операция прервана</string>
+     
+    <string name="qs_menu_item_columns">Столбцов</string>
+    <string name="qs_menu_item_columns_three">3</string>
+    <string name="qs_menu_item_columns_four">4</string>
+    <string name="qs_menu_item_columns_five">5</string>
+    <string name="qs_menu_item_reset">Сбросить</string> 
 </resources>
